<resources>
    <string name="app_name">MovieApp</string>
    <string name="home_title">Movie App</string>
    <string name="open_drawer">Open Drawer</string>

    <string name="screen_title_home">Home</string>
    <string name="screen_title_action_movies">Action Movies</string>
    <string name="screen_title_animation_movies">Animation Movies</string>

    <string name="section_title_top_rated">Top Rated</string>
    <string name="section_title_action">Action</string>
    <string name="section_title_animation">Animation</string>

    <string name="section_error_top_rated">Failed to load top rated movies</string>
    <string name="section_error_action">Failed to load Action movies</string>
    <string name="section_error_animation">Failed to load Animation movies</string>

    <string name="section_filter_text_default">View All</string>

    <string name="error_text">Check your connection or try again later.</string>
    <string name="ok_button_text">OK</string>
    <string name="loading_tasks_error">Error while loading tasks</string>

    <string name="empty"> </string>

    <string name="label_all">All Movie</string>
    <string name="label_action">Action</string>
    <string name="label_animation">Animation</string>
    <string name="label_comedy">Comedy</string>
    <string name="movie_marked_favorite">Success add to favorite</string>
    <string name="movie_marked_unfavorite">Delete from favorite</string>
    <string name="open_search">Open Search</string>
    <string name="open_notification">Open Notification</string>
    <string name="type_search">Type title, categories, years, etc</string>
    <string name="empty_data">Search data is empty</string>
    <string name="recommendation_movie">Movie Recommendation for you</string>
    <string name="recommendation_tv">Tv Recommendation for you</string>
    <string name="see_all">See All</string>
    <string name="open_favorite">Open Favorite</string>
    <string name="cannot_find_search">we are sorry, we can \nnot find the movie :(</string>
    <string name="find_your_movie">Find your movie by Type title, \ncategories, years, etc</string>
    <string name="cannot_find_movie">There is No Movie Yet!</string>
    <string name="coming_soon">This feature is coming soon!</string>
    <string name="found_out_soon">You will found out soon!</string>
    <string name="actor">Actors</string>
    <string name="movie">Movies</string>


    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="action_adventure">Action &amp; Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="kids">Kids</string>
    <string name="mystery">Mystery</string>
    <string name="news">News</string>
    <string name="music">Music</string>
    <string name="reality">Reality</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="science_fiction_fantasy">Sci-Fi &amp; Fantasy</string>
    <string name="soap">Soap</string>
    <string name="talk">Talk</string>
    <string name="thriller">Thriller</string>
    <string name="tv_movie">TV Movie</string>
    <string name="war">War</string>
    <string name="war_politics">War &amp; Politics</string>
    <string name="western">Western</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="pg">PG-13</string>
    <string name="premium">Premium</string>
    <string name="no_release_date">No Release Date</string>
    <string name="upcoming_movie_release_date_text">Upcoming Movie</string>
    <string name="upcoming_movies">Upcoming Movie</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="welcome_back_please_enter_your_details">Welcome back ! Please enter \nyour details.</string>
    <string name="email_address">Email Address</string>
    <string name="hi_tiffany">Hi, Welcome</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_registered_phone_number_to_sign_up">Enter your registered \nPhone Number to Sign Up</string>
    <string name="already_have_account">I already have an account?</string>
    <string name="cinemax">CINEMAX</string>
    <string name="or_sign_up_with">Or Sign Up with</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="facebook">Facebook</string>
    <string name="full_name">Full Name</string>
    <string name="lets_get_started">Let’s get started</string>
    <string name="the_latest_movies_and_series_are_here">The latest movies and series are here</string>
    <string name="reset_password">Reset Password</string>
    <string name="recover_your_account_password">Recover your account password</string>
    <string name="next">Next</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="verifying_your_account">Verifying your account</string>
    <string name="continue_button">Continue</string>
    <string name="not_receive_code">"Didn’t receive code? "</string>
    <string name="resend">Resend</string>
    <string name="input_empty">Input Data is Empty</string>
    <string name="login_success">Login Is Successfull</string>
    <string name="login_failed">Login is Failed</string>
    <string name="email_and_password_must_not_be_empty">Email and password must not be empty</string>
    <string name="register_failed">Register Failed</string>
    <string name="register_success">Register Success</string>
    <string name="save_database_failed">Save to database failed</string>
    <string name="email_is_exist">Email is exist</string>
    <string name="email_already_in_use">The email address is already in use by another account.</string>
    <string name="unexpected_error">Unexpected Error!</string>
    <string name="i_agree_to_the">"I agree to the "</string>
    <string name="terms_and_services">"Terms and Services "</string>
    <string name="and">"and "</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="download">Download</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone_number">Phone Number</string>
    <string name="terms">Terms</string>
    <string name="change_service">Changes to the Service and/or Terms :</string>
    <string name="term_describe">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat
        ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus.
        Odio vulputate est id tincidunt fames.\n\nLorem ipsum dolor sit amet, consectetur adipiscing
        elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat
        ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus.
        Odio vulputate est id tincidunt fames.</string>
    <string name="notification">Notification</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="exceptions">Exceptions</string>
    <string name="messages_notifications">Messages Notifications</string>
    <string name="suggested_languages">Suggested Languages</string>
    <string name="other_languages">Other Languages</string>
    <string name="language">Language</string>
    <string name="lets_stream_your_favorite_movie">Let’s stream your favorite movie</string>
    <string name="search">Search</string>
    <string name="most_popular_movie">Most Popular Movie</string>
    <string name="most_popular_tv">Most Popular Tv</string>
    <string name="story_line">Story Line</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="gallery">Gallery</string>
    <string name="now_playing_movie">Now Playing Movie</string>
    <string name="now_playing_tv">Now Playing Tv</string>
    <string name="top_rated">Top Rated</string>
    <string name="discover">Discover</string>
    <string name="trending">Trending</string>
    <string name="add_wishlist">Success Add to WishList</string>
    <string name="remove_wishlist">Success Remove from WishList</string>
    <string name="search_history">Search History</string>
    <string name="wishlist">Wishlist</string>
    <string name="success_delete_from_wishlist">Success Delete from Wishlist</string>
    <string name="trailer">Trailer</string>
    <string name="search_title">Search a title..</string>
    <string name="category">Categories</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="camera">Camera</string>
    <string name="icon_profile">Icon Profile</string>
    <string name="seasons">Seasons</string>
    <string name="upcoming_tv_shows">Upcoming Tv Show</string>
    <string name="top_rated_tv">Top Rated Tv</string>
    <string name="discover_tv">Discover Tv</string>
    <string name="trending_tv">Trending Tv Show</string>
</resources>
