...
    content: @Composable () -> Unit
) {
    val state = rememberPullRefreshState(refreshing = isRefreshing,
        onRefresh = onRefresh
    )
    Box(modifier =  modifier.fillMaxSize()
        .background(Dark).testTag("SwipeRefresh") // ✅ Add testTag for swipe refresh
        .pullRefresh(state = state)) {
        content()

        PullRefreshIndicator(
            modifier = Modifier
                .padding(indicatorPadding)
                .align(indicatorAlignment).testTag("RefreshIndicator"), // ✅ Add testTag for loading indicator,
            refreshing = isRefreshing,
            state = state,
            backgroundColor = backgroundColor,
            contentColor = contentColor,
            scale = scale
        )
...
