...

@Composable
fun HomeAppBar(
    user : FirebaseUser?,
    onSeeFavoriteClick : () -> Unit
){
    Row(modifier = Modifier.testTag("HomeTopAppBar")
            .fillMaxWidth()
            .padding(16.dp),
        verticalAlignment = Alignment.CenterVertically
    ){
        Box (modifier = Modifier
            .size(40.dp)
...
                fontWeight = FontWeight.Medium,
                color = Grey
            )
        }

        Box(modifier = Modifier.clickable { onSeeFavoriteClick()}
            .size(32.dp).testTag("WishlistButton")
            .clip(RoundedCornerShape(12.dp))
            .background(Soft),
            contentAlignment = Alignment.Center
        ) {
            Icon(
                modifier = Modifier.size(24.dp),
...
